--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 200px;
+}
 body {
     margin:0px;
     padding: 0px;
@@ -39,7 +43,7 @@ a:visited {
 header {
     width: 100%;
     height: 170px;
-    background-color: rgba(104, 103, 101, 0.95);
+    background-color: rgba(104, 103, 101, 0.98);
     border-bottom: 8px solid white;
     top: 0px;
     right: 0px;
@@ -68,7 +72,20 @@ header {
     margin-top:0px;
     margin-bottom: 20px;
 }
-
+.toTop {
+    background-color:black;
+    font-family: Nunito Black;
+    font-size: 18px;
+    color: black;
+    padding: 5px 5px;
+    border-radius: 4px;
+    position: fixed;
+    bottom: -4px;
+    right: 10px;
+    border-top: 2px solid white;
+    border-right: 2px solid white;
+    border-left: 2px solid white;
+}
 /* Hero Grid CSS */
 #heroGrid {
     margin-top: 175px;
@@ -94,6 +111,7 @@ header {
     padding-left: 20px;
     padding-right: 20px;
     justify-content: center;
+   
 }
 .mySkills {
     padding-top: 10px;
